PIM-4164: Fix css, remove horizontal scrollable bar

--- a/PimEnterprise/Bundle/ProductAssetBundle/Resources/public/css/asset.less
+++ b/PimEnterprise/Bundle/ProductAssetBundle/Resources/public/css/asset.less
@@ -19,6 +19,10 @@
   }
 }
 
+.tab-content {
+  overflow: initial;
+}
+
 #global-settings {
   h3 {
     height: 42px;
